--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "redux-devtools-extension": "^2.13.9",
     "sass": "^1.57.1",
     "slick-carousel": "^1.8.1",
+    "swiper": "^6.8.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
