--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
     "sass": "^1.57.1",
     "slick-carousel": "^1.8.1",
     "swiper": "^6.8.4",
