--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.0",
+    "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
