--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_BASE_URL=https://ecommerce-api-smoky.vercel.app
+REACT_APP_BASE_URL=https://api-lamsonwatch.vercel.app
 #REACT_APP_BASE_URL=http://localhost:5050
