--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_BASE_URL=https://api-lamsonwatch.vercel.app/api/v1
-#REACT_APP_BASE_URL=http://localhost:5050
 REACT_APP_BASE_IMG=https://api-lamsonwatch.vercel.app
+#REACT_APP_BASE_URL=http://localhost:5050/api/v1
+#REACT_APP_BASE_IMG=http://localhost:5050
