--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
     "jwt-decode": "^3.1.2",
+    "moment": "2.29.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-multi-carousel": "^2.8.2",
