update href comments facebook

--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ REACT_APP_BASE_IMG=https://api-lamsonwatch.vercel.app
 #REACT_APP_BASE_URL=http://localhost:5050/api/v1
 #EACT_APP_BASE_IMG=http://localhost:5050
 REACT_APP_FACEBOOK_ID=182460104547280
-REACT_APP_IS_LOCAL=true
+REACT_APP_IS_LOCAL=1
